<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@color/grey_50"
    tools:context="com.tradeitsignals.backoffice.ui.fragments.SendSignalFragment"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_send_signal_title"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/send_a_signal"
        android:padding="18dp"/>

    <LinearLayout
        android:id="@+id/container_expiry_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_expiry_time_label"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/expiry_time_label" />

        <TimePicker
            android:id="@+id/tp_expiry_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:scaleX="0.80"
            android:scaleY="0.80"
            android:timePickerMode="spinner"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_currency_pair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_currency_pair_label"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/currency_pair_label" />

        <Spinner
            android:id="@+id/s_currency_pairs"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="9"
            android:gravity="center"
            android:entries="@array/currency_pairs" />


        <RadioGroup
            android:id="@+id/rg_call_put"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="6"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:checked="true" />

            <RadioButton
                android:id="@+id/rb_put"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/put"
                android:checked="false"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_rate_label"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/rate_label" />

        <EditText
            android:id="@+id/et_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_notification_message"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/message_label" />

        <EditText
            android:id="@+id/et_notification_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:minLines="1"
            android:lines="2"
            android:maxLines="3"
            android:inputType="textMultiLine"
            android:singleLine="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_channel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/channel_label" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_channels"
            android:layout_weight="15"
            android:entries="@array/channels"/>
    </LinearLayout>

    <Button
        android:id="@+id/b_send_signal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_signal" />
</LinearLayout>
