<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/email_enter"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:maxLines="1" />

        <Button
            android:id="@+id/btn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_title"
            android:background="?attr/colorPrimary"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>